# root

bindings/pyroot/: CMakeLists.txt
bindings/pyroot/src/: Pythonize.cxx
cmake/modules/: FindCloudflare.cmake  RootBuildOptions.cmake  RootConfiguration.cmake  SearchInstalledSoftware.cmake
core/: CMakeLists.txt
core/base/inc/: TBuffer.h
core/base/src/: TBuffer.cxx  TROOT.cxx  TSystem.cxx
core/cloudflare/: CMakeLists.txt
core/cloudflare/inc/: ZipCloudflare.h
core/cloudflare/src/: ZipCloudflare.c
core/cloudflare/src/cloudflare/: CMakeLists.txt  Makefile.in  configure  deflate.c  root_configure
core/unix/src/: TUnixSignalManager.cxx  TUnixSystem.cxx
core/utils/: CMakeLists.txt
core/zip/inc/: Compression.h  RZip.h
core/zip/src/: Bits.h  ZInflate.c
etc/: lldb-backtrace.sh
io/io/inc/: TBufferFile.h  TBufferIO.h
io/io/src/: TBufferFile.cxx  TDirectoryFile.cxx  TFile.cxx  TFileCacheRead.cxx  TKey.cxx
test/: CMakeLists.txt  Localcompression.cxx  Localcompression.h  LocalcompressionLinkDef.h  MainDummy.cxx  MainEvent.cxx  MainLocalcombine.cxx  MainLocalcompression.cxx
tree/: aaa
tree/dataframe/: CMakeLists.txt
tree/dataframe/src/: RLoopManager.cxx  RRootBulkDS.cxx
tree/dataframe/test/: CMakeLists.txt  datasource_rootbulk.cxx
tree/tree/inc/: TLeafL.h  TLeafO.h  TLeafS.h  TTreeCacheUnzip.h
tree/tree/src/: TBasket.cxx  TBranch.cxx  TBranchClones.cxx  TBranchElement.cxx  TTree.cxx  TTreeCache.cxx  TTreeCacheUnzip.cxx
tree/treeplayer/inc/: LinkDef.h  TTreeReaderValue.h
tree/treeplayer/src/: TTreeReaderArray.cxx  TTreeReaderValue.cxx
(+1 files in other folders)
